--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.8",
+    "@reown/appkit": "^1.8.6",
+    "@reown/appkit-adapter-wagmi": "^1.8.6",
+    "@tanstack/react-query": "^5.90.2",
+    "@vercel/analytics": "^1.5.0",
     "@wagmi/connectors": "^5.10.2",
     "axios": "^1.12.2",
     "ethers": "^6.15.0",
-    "next": "15.5.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "viem": "^2.37.7",
+    "next": "^15.5.3",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "viem": "^2.37.8",
     "wagmi": "^2.17.2"
   },
   "devDependencies": {
