--- a/package.json
+++ b/package.json
@@ -5,29 +5,28 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^2.2.8",
     "@reown/appkit": "^1.8.6",
     "@reown/appkit-adapter-wagmi": "^1.8.6",
     "@tanstack/react-query": "^5.90.2",
-    "@vercel/analytics": "^1.5.0",
-    "@wagmi/connectors": "^5.10.2",
-    "axios": "^1.12.2",
-    "ethers": "^6.15.0",
-    "next": "^15.5.3",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "viem": "^2.37.8",
+    "axios": "^1.7.2",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "viem": "^2.17.4",
     "wagmi": "^2.17.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20.19.17",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/node": "^18.19.17",
+    "@types/prop-types": "^15.7.15",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.6",
+    "typescript": "^5.5.3"
   }
 }
