--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "viem": "^2.17.4",
-    "wagmi": "^2.17.2"
+    "wagmi": "^2.17.2",
+    "tailwindcss": "^3.4.6",
+    "postcss": "^8.4.39"
   },
   "devDependencies": {
     "@types/node": "^18.19.17",
     "@types/prop-types": "^15.7.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.6",
     "typescript": "^5.5.3"
   }
 }
