--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.7.2",
     "next": "^14.2.5",
+    "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "viem": "^2.17.4",
-    "wagmi": "^2.17.2",
     "tailwindcss": "^3.4.6",
-    "postcss": "^8.4.39"
+    "viem": "^2.17.4",
+    "wagmi": "^2.17.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "^18.19.17",
     "@types/prop-types": "^15.7.15",
     "@types/react": "^18.3.3",
