--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "resend": "^6.1.0",
     "tailwindcss": "^3.4.6",
     "viem": "^2.17.4",
     "wagmi": "^2.17.2"
