--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@reown/appkit": "^1.8.6",
     "@reown/appkit-adapter-wagmi": "^1.8.6",
     "@tanstack/react-query": "^5.90.2",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.7.2",
     "next": "^14.2.5",
-    "postcss": "^8.4.39",
+    "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "resend": "^6.1.0",
-    "tailwindcss": "^3.4.6",
+    "tailwindcss": "^3.4.17",
     "viem": "^2.17.4",
     "wagmi": "^2.17.2"
   },
