--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "resend": "^6.1.0",
     "tailwindcss": "^3.4.17",
     "viem": "^2.17.4",
-    "wagmi": "^2.17.2"
+    "wagmi": "^2.17.2",
+    "@tailwindcss/postcss": "^4.1.13"
+
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "^18.19.17",
     "@types/prop-types": "^15.7.15",
     "@types/react": "^18.3.3",
