--- a/package.json
+++ b/package.json
@@ -14,20 +14,22 @@
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.7.2",
     "next": "^14.2.5",
-    "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "resend": "^6.1.0",
-    "tailwindcss": "^3.4.6",
     "viem": "^2.17.4",
     "wagmi": "^2.17.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "^18.19.17",
     "@types/prop-types": "^15.7.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
     "typescript": "^5.5.3"
   }
 }
